<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="40dp">

  <TextView
      android:id="@+id/textView"
      android:layout_width="@dimen/filter_headline_width"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_alignParentStart="true"
      android:layout_alignParentTop="true"
      android:text="@string/begin_date"/>

  <TextView
      android:id="@+id/beginDateTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/textView"
      android:layout_toEndOf="@+id/textView"
      android:layout_toRightOf="@+id/textView"
      android:text="New Text"/>

  <TextView
      android:id="@+id/textView3"
      android:layout_width="@dimen/filter_headline_width"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_alignParentStart="true"
      android:layout_below="@+id/textView"
      android:text="@string/sort_order"/>

  <Spinner
      android:id="@+id/sortSpinner"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/textView"
      android:layout_toEndOf="@+id/textView3"
      android:layout_toRightOf="@+id/textView3"
      android:entries="@array/sort_array"
      android:spinnerMode="dropdown"/>

  <TextView
      android:id="@+id/textView2"
      android:layout_width="@dimen/filter_headline_width"
      android:layout_height="wrap_content"
      android:layout_below="@+id/sortSpinner"
      android:layout_toLeftOf="@+id/beginDateTextView"
      android:layout_toStartOf="@+id/beginDateTextView"
      android:lines="2"
      android:text="@string/news_desk_values"/>

  <CheckBox
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/arts"
      android:id="@+id/artsCheckbox"
      android:layout_alignTop="@+id/textView2"
      android:layout_toRightOf="@+id/textView2"
      android:layout_toEndOf="@+id/textView2"
      android:checked="false"/>

  <CheckBox
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/fashion_style"
      android:id="@+id/fashionStyleCheckbox"
      android:layout_below="@+id/artsCheckbox"
      android:layout_alignLeft="@+id/artsCheckbox"
      android:layout_alignStart="@+id/artsCheckbox"
      android:checked="false"/>

  <CheckBox
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/sports"
      android:id="@+id/sportsCheckbox"
      android:layout_below="@+id/fashionStyleCheckbox"
      android:layout_alignLeft="@+id/artsCheckbox"
      android:layout_alignStart="@+id/artsCheckbox"
      android:checked="false"/>

  <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/save"
      android:id="@+id/saveButton"
      android:layout_below="@+id/sportsCheckbox"
      android:layout_centerHorizontal="true"/>
</RelativeLayout>